// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PermissionsTab should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.p
        classname="el-has-grey-text"
      >
        Permissions are registered as scopes against the access token you receive back from one of our Authentication Flows. They map 1:1 and on a read/write basis to endpoints in our Platform REST API. As such, it is worth looking at the
         
        <a
          href="/swagger"
          rel="noopener noreferrer"
          target="_blank"
        >
          API explorer here
           
        </a>
        before proceeding, to investigate which permissions you think you will need.
      </mock-styled.p>
      <mock-styled.div
        classname="el-form-layout-has-margin"
      >
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Permissions
            </mock-styled.label>
            <mock-styled.div>
              <mock-styled.input
                errormessage="At least one Permission is required"
                id="app-edit-scopes-select"
                label="Permissions"
                name="scopes"
              />
              <mock-styled.div
                classname=""
              >
                <mock-styled.span
                  classname="el-ml2 el-intent-default el-icon-new"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2Zm0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2ZM8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2Zm12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2Z"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
                <p>
                  Please select from the options below
                </p>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="el-has-grey-chips"
                  htmlfor="test-static-id"
                >
                  MOCK_DESCRIPTION
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        This section refers to products that are available within the Reapit Group of Companies. For UK based developers, this will typically default to Agency Cloud however, as we launch the Reapit AppMarket in other countries and with different products, you may wish for your application to list in these alternative AppMarkets. You can select more than one option but at least one option must be selected.
      </mock-styled.p>
      <mock-styled.div
        classname="el-form-layout-has-margin"
      >
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Reapit Products
            </mock-styled.label>
            <mock-styled.div>
              <mock-styled.input
                id="app-edit-products-select"
                label="Reapit Products"
                name="products"
              />
              <mock-styled.div
                classname=""
              >
                <mock-styled.span
                  classname="el-ml2 el-intent-default el-icon-new"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2Zm0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2ZM8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2Zm12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2Z"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
                <p>
                  Please select from the options below
                </p>
              </mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.input
                  id="test-static-id"
                  type="checkbox"
                />
                <mock-styled.label
                  classname="el-has-grey-chips"
                  htmlfor="test-static-id"
                >
                  MOCK_NAME
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        You should toggle ‘Private App’ if you only want your app to be private to a select group of customers (max of 3). Simply enter their ‘Customer ID’ as a comma separated list. For more information on how to find the Customer ID,
         
        <a>
           please see here.
        </a>
      </mock-styled.p>
      <mock-styled.div
        classname="el-form-layout-has-margin"
      >
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Private App
            </mock-styled.label>
            <mock-styled.input
              id="app-edit-is-private-app"
              type="checkbox"
            />
            <mock-styled.label
              classname="el-has-grey-bg"
              htmlfor="app-edit-is-private-app"
            >
              <mock-styled.span>
                Yes
              </mock-styled.span>
              <mock-styled.span>
                No
              </mock-styled.span>
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              disabled="true"
              id="test-static-id"
              name="limitToClientIds"
              placeholder="Please enter the Customer ID. For multiple Customer ID’s, please separate using a comma"
              type="text"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Private App Client Ids
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.p
      classname="el-has-grey-text"
    >
      Permissions are registered as scopes against the access token you receive back from one of our Authentication Flows. They map 1:1 and on a read/write basis to endpoints in our Platform REST API. As such, it is worth looking at the
       
      <a
        href="/swagger"
        rel="noopener noreferrer"
        target="_blank"
      >
        API explorer here
         
      </a>
      before proceeding, to investigate which permissions you think you will need.
    </mock-styled.p>
    <mock-styled.div
      classname="el-form-layout-has-margin"
    >
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Permissions
          </mock-styled.label>
          <mock-styled.div>
            <mock-styled.input
              errormessage="At least one Permission is required"
              id="app-edit-scopes-select"
              label="Permissions"
              name="scopes"
            />
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="el-ml2 el-intent-default el-icon-new"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2Zm0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2ZM8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2Zm12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2Z"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
              <p>
                Please select from the options below
              </p>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.input
                id="test-static-id"
                type="checkbox"
              />
              <mock-styled.label
                classname="el-has-grey-chips"
                htmlfor="test-static-id"
              >
                MOCK_DESCRIPTION
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.p
      classname="el-has-grey-text"
    >
      This section refers to products that are available within the Reapit Group of Companies. For UK based developers, this will typically default to Agency Cloud however, as we launch the Reapit AppMarket in other countries and with different products, you may wish for your application to list in these alternative AppMarkets. You can select more than one option but at least one option must be selected.
    </mock-styled.p>
    <mock-styled.div
      classname="el-form-layout-has-margin"
    >
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Reapit Products
          </mock-styled.label>
          <mock-styled.div>
            <mock-styled.input
              id="app-edit-products-select"
              label="Reapit Products"
              name="products"
            />
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="el-ml2 el-intent-default el-icon-new"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2Zm0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2ZM8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2Zm12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2Z"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
              <p>
                Please select from the options below
              </p>
            </mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.input
                id="test-static-id"
                type="checkbox"
              />
              <mock-styled.label
                classname="el-has-grey-chips"
                htmlfor="test-static-id"
              >
                MOCK_NAME
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.p
      classname="el-has-grey-text"
    >
      You should toggle ‘Private App’ if you only want your app to be private to a select group of customers (max of 3). Simply enter their ‘Customer ID’ as a comma separated list. For more information on how to find the Customer ID,
       
      <a>
         please see here.
      </a>
    </mock-styled.p>
    <mock-styled.div
      classname="el-form-layout-has-margin"
    >
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Private App
          </mock-styled.label>
          <mock-styled.input
            id="app-edit-is-private-app"
            type="checkbox"
          />
          <mock-styled.label
            classname="el-has-grey-bg"
            htmlfor="app-edit-is-private-app"
          >
            <mock-styled.span>
              Yes
            </mock-styled.span>
            <mock-styled.span>
              No
            </mock-styled.span>
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname=""
            disabled="true"
            id="test-static-id"
            name="limitToClientIds"
            placeholder="Please enter the Customer ID. For multiple Customer ID’s, please separate using a comma"
            type="text"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Private App Client Ids
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PermissionsTab should match a snapshot when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.p
        classname="el-has-grey-text"
      >
        Permissions are registered as scopes against the access token you receive back from one of our Authentication Flows. They map 1:1 and on a read/write basis to endpoints in our Platform REST API. As such, it is worth looking at the
         
        <a
          href="/swagger"
          rel="noopener noreferrer"
          target="_blank"
        >
          API explorer here
           
        </a>
        before proceeding, to investigate which permissions you think you will need.
      </mock-styled.p>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div />
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="el-form-layout-has-margin"
      />
      <mock-styled.p
        classname="el-has-grey-text"
      >
        This section refers to products that are available within the Reapit Group of Companies. For UK based developers, this will typically default to Agency Cloud however, as we launch the Reapit AppMarket in other countries and with different products, you may wish for your application to list in these alternative AppMarkets. You can select more than one option but at least one option must be selected.
      </mock-styled.p>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div />
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="el-form-layout-has-margin"
      />
      <mock-styled.p
        classname="el-has-grey-text"
      >
        You should toggle ‘Private App’ if you only want your app to be private to a select group of customers (max of 3). Simply enter their ‘Customer ID’ as a comma separated list. For more information on how to find the Customer ID,
         
        <a>
           please see here.
        </a>
      </mock-styled.p>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div />
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="el-form-layout-has-margin"
      >
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.label>
              Private App
            </mock-styled.label>
            <mock-styled.input
              id="app-edit-is-private-app"
              type="checkbox"
            />
            <mock-styled.label
              classname="el-has-grey-bg"
              htmlfor="app-edit-is-private-app"
            >
              <mock-styled.span>
                Yes
              </mock-styled.span>
              <mock-styled.span>
                No
              </mock-styled.span>
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.input
              classname=""
              disabled="true"
              id="test-static-id"
              name="limitToClientIds"
              placeholder="Please enter the Customer ID. For multiple Customer ID’s, please separate using a comma"
              type="text"
            />
            <mock-styled.label
              htmlfor="test-static-id"
            >
              Private App Client Ids
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.p
      classname="el-has-grey-text"
    >
      Permissions are registered as scopes against the access token you receive back from one of our Authentication Flows. They map 1:1 and on a read/write basis to endpoints in our Platform REST API. As such, it is worth looking at the
       
      <a
        href="/swagger"
        rel="noopener noreferrer"
        target="_blank"
      >
        API explorer here
         
      </a>
      before proceeding, to investigate which permissions you think you will need.
    </mock-styled.p>
    <mock-styled.div
      classname=""
    >
      <mock-styled.div>
        <mock-styled.div />
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname="el-form-layout-has-margin"
    />
    <mock-styled.p
      classname="el-has-grey-text"
    >
      This section refers to products that are available within the Reapit Group of Companies. For UK based developers, this will typically default to Agency Cloud however, as we launch the Reapit AppMarket in other countries and with different products, you may wish for your application to list in these alternative AppMarkets. You can select more than one option but at least one option must be selected.
    </mock-styled.p>
    <mock-styled.div
      classname=""
    >
      <mock-styled.div>
        <mock-styled.div />
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname="el-form-layout-has-margin"
    />
    <mock-styled.p
      classname="el-has-grey-text"
    >
      You should toggle ‘Private App’ if you only want your app to be private to a select group of customers (max of 3). Simply enter their ‘Customer ID’ as a comma separated list. For more information on how to find the Customer ID,
       
      <a>
         please see here.
      </a>
    </mock-styled.p>
    <mock-styled.div
      classname=""
    >
      <mock-styled.div>
        <mock-styled.div />
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname="el-form-layout-has-margin"
    >
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.label>
            Private App
          </mock-styled.label>
          <mock-styled.input
            id="app-edit-is-private-app"
            type="checkbox"
          />
          <mock-styled.label
            classname="el-has-grey-bg"
            htmlfor="app-edit-is-private-app"
          >
            <mock-styled.span>
              Yes
            </mock-styled.span>
            <mock-styled.span>
              No
            </mock-styled.span>
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.input
            classname=""
            disabled="true"
            id="test-static-id"
            name="limitToClientIds"
            placeholder="Please enter the Customer ID. For multiple Customer ID’s, please separate using a comma"
            type="text"
          />
          <mock-styled.label
            htmlfor="test-static-id"
          >
            Private App Client Ids
          </mock-styled.label>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
